--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "4.0-ejs",
   "version": "1.0.0",
-  "description": "",
+  "description": "471",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -15,5 +15,6 @@
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {}
 }
